[package]
name = "default_variant"
version = "0.1.0"
edition = "2021"
description = "A proc-macro for specifying the variants or values to be used when deriving `Default` in enums"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.77", features = ["extra-traits", "full"] }
quote = "1.0.9"
proc-macro2 = { version = "1.0" }